--- a/.gitignore
+++ b/.gitignore
@@ -18,23 +18,22 @@
 # misc
 .DS_Store
 *.pem
+.eslintcache
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*.local
 
 # vercel
 .vercel
 
-# We are using yarn
-package-lock.json
-
-# Caching
+# typescript
 *.tsbuildinfo
+next-env.d.ts
+
+certificates
