--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,8 @@
 {
     "recommendations": [
-        "styled-components.vscode-styled-components",
-        "editorconfig.editorconfig",
-        "esbenp.prettier-vscode",
         "dbaeumer.vscode-eslint",
+        "esbenp.prettier-vscode",
+        "rubymaniac.vscode-direnv",
+        "styled-components.vscode-styled-components"
     ]
 }
