--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "lint": "next lint",
     "lint:fix": "next lint -- --fix",
     "type-check": "tsc --project tsconfig.json --pretty --noEmit",
+    "test": "jest --watch",
+    "test:once": "jest",
+    "test:ci": "jest --ci",
     "prepare": "husky"
   },
   "dependencies": {
@@ -23,7 +26,6 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@photobot/reduxjs-toolkit-persist": "^7.2.2",
     "@reduxjs/toolkit": "^2.2.1",
-    "@types/eslint-config-prettier": "^6.11.3",
     "color": "^4.2.3",
     "eslint-config-next": "^14",
     "modern-normalize": "^2.0.0",
@@ -42,7 +44,11 @@
     "@commitlint/cli": "^19.0.3",
     "@commitlint/config-conventional": "^19.0.3",
     "@next/eslint-plugin-next": "^14",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
     "@types/color": "^3.0.6",
+    "@types/eslint-config-prettier": "^6.11.3",
+    "@types/jest": "^29.5.12",
     "@types/lint-staged": "^13.3.0",
     "@types/node": "20.11.25",
     "@types/react": "^18",
@@ -54,6 +60,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "typescript": "^5.3"
