--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "jest.config.js"
+  ]
 }
