--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint -- --fix",
+    "lint:fix": "next lint --fix",
+    "lint:fix-all": "next lint -- --fix",
     "type-check": "tsc --project tsconfig.json --pretty --noEmit",
     "test": "jest --watch",
     "test:once": "jest",
