--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^9.1.0",
     "react-timeago": "^7.2.0",
     "react-use": "^17.5.0",
+    "redux-thunk": "^3.1.0",
     "slugify": "^1.6.6",
     "styled-components": "6.1.8"
   },
