--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@photobot/reduxjs-toolkit-persist": "^7.2.2",
     "@reduxjs/toolkit": "^2.2.1",
     "color": "^4.2.3",
     "eslint-config-next": "^14",
@@ -38,6 +37,8 @@
     "react-redux": "^9.1.0",
     "react-timeago": "^7.2.0",
     "react-use": "^17.5.0",
+    "redux-thunk": "^3.1.0",
+    "reduxjs-toolkit-persist": "^7.2.1",
     "slugify": "^1.6.6",
     "styled-components": "6.1.8"
   },
