--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-use": "^17.5.0",
     "redux-thunk": "^3.1.0",
     "reduxjs-toolkit-persist": "^7.2.1",
+    "sharp": "^0.33.2",
     "slugify": "^1.6.6",
     "styled-components": "6.1.8"
   },
