--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "@vercel/analytics": "^1.2.2",
     "color": "^4.2.3",
     "eslint-config-next": "^14",
+    "i18next": "^23.10.1",
     "modern-normalize": "^2.0.0",
     "next": "^14.1.3",
+    "next-i18next": "^15.2.0",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
+    "react-i18next": "^14.1.0",
     "react-redux": "^9.1.0",
     "react-timeago": "^7.2.0",
     "react-use": "^17.5.0",
