--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test": "jest --watch",
     "test:once": "jest",
     "test:ci": "jest --ci",
-    "prepare": "husky"
+    "prepare": "husky",
+    "gen-assets": "tsx ./scripts/gen-assets.ts"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -54,10 +55,11 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@types/color": "^3.0.6",
+    "@types/eslint": "^8.56.6",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/jest": "^29.5.12",
     "@types/lint-staged": "^13.3.0",
-    "@types/node": "20.11.25",
+    "@types/node": "^18",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-timeago": "^4.1.3",
@@ -66,11 +68,13 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "favicons": "^7.2.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
+    "tsx": "^4.7.1",
     "typescript": "^5.3"
   }
 }
