--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-i18next": "^14.1.0",
     "react-redux": "^9.1.0",
+    "react-share": "^5.1.0",
     "react-timeago": "^7.2.0",
     "react-use": "^17.5.0",
     "redux-thunk": "^3.1.0",
