--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "test:once": "jest",
     "test:ci": "jest --ci",
     "prepare": "husky",
-    "gen-manifest": "tsx ./scripts/gen-manifest.ts"
+    "gen-manifest": "tsx ./scripts/gen-manifest.ts",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -49,9 +51,18 @@
     "styled-components": "6.1.8"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.3.0",
     "@commitlint/cli": "^19.0.3",
     "@commitlint/config-conventional": "^19.0.3",
     "@next/eslint-plugin-next": "^14",
+    "@storybook/addon-essentials": "^8.0.5",
+    "@storybook/addon-interactions": "^8.0.5",
+    "@storybook/addon-links": "^8.0.5",
+    "@storybook/addon-onboarding": "^8.0.5",
+    "@storybook/blocks": "^8.0.5",
+    "@storybook/nextjs": "^8.0.5",
+    "@storybook/react": "^8.0.5",
+    "@storybook/test": "^8.0.5",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@types/color": "^3.0.6",
@@ -68,17 +79,19 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-storybook": "^0.8.0",
     "favicons": "^7.2.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
+    "storybook": "^8.0.5",
     "tsx": "^4.7.1",
     "typescript": "^5.3"
   },
   "peerDependencies": {
-    "react-i18next": "^14.1.0",
-    "i18next": "^23.10.1"
+    "i18next": "^23.10.1",
+    "react-i18next": "^14.1.0"
   }
 }
