--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "redux-thunk": "^3.1.0",
     "reduxjs-toolkit-persist": "^7.2.1",
     "sharp": "^0.33.4",
-    "slugify": "^1.6.6",
-    "styled-components": "6.1.8"
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
