--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-next": "^14.2.5",
     "next": "^14.2.5",
     "next-i18next": "^15.3.1",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
