--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,4 +14,17 @@
     "typescript",
     "typescriptreact"
   ],
+  "files.associations": {
+    "*.css": "tailwindcss"
+  },
+  "editor.quickSuggestions": {
+    "strings": "on"
+  },
+  "tailwindCSS.classAttributes": [
+    "className",
+    "class",
+    "cx",
+    "iteratorClassName",
+    "localStyles.*"
+  ],
 }
