--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@vercel/analytics": "^1.3.1",
+    "classnames": "^2.5.1",
     "color": "^4.2.3",
     "eslint-config-next": "^14.2.5",
-    "modern-normalize": "^2.0.0",
     "next": "^14.2.5",
     "next-i18next": "^15.3.1",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
@@ -46,8 +47,7 @@
     "redux-thunk": "^3.1.0",
     "reduxjs-toolkit-persist": "^7.2.1",
     "sharp": "^0.33.4",
-    "slugify": "^1.6.6",
-    "styled-components": "6.1.8"
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
@@ -76,17 +76,21 @@
     "@types/react-timeago": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-tailwindcss": "^3.17.4",
     "favicons": "^7.2.0",
     "husky": "^9.1.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.8",
+    "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "storybook": "^8.2.7",
+    "tailwindcss": "^3.4.10",
     "tsx": "^4.16.5",
     "typescript": "^5.5.4"
   },
