--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "redux-thunk": "^3.1.0",
     "reduxjs-toolkit-persist": "^7.2.1",
     "sharp": "^0.33.4",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
