--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@reduxjs/toolkit": "^2.2.7",
     "@vercel/analytics": "^1.3.1",
     "classnames": "^2.5.1",
     "color": "^4.2.3",
@@ -40,14 +39,12 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
-    "react-redux": "^9.1.2",
     "react-share": "^5.1.0",
     "react-timeago": "^7.2.0",
     "react-use": "^17.5.1",
-    "redux-thunk": "^3.1.0",
-    "reduxjs-toolkit-persist": "^7.2.1",
     "sharp": "^0.33.4",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
