--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "themostannoyingwebsite",
   "version": "0.2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/onetdev/themostannoyingwebsite.com"
+  },
   "author": {
     "name": "Konrad Koller",
     "email": "info@onet.dev",
