--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -1,18 +1,15 @@
-name: "Lint PR"
+name: Lint PR
 
 on:
-  pull_request_target:
-    types:
-      - opened
-      - edited
-      - synchronize
-      - reopened
+  merge_group:
+  pull_request:
+    types: [opened, edited, synchronize, reopened]
 
 permissions:
   pull-requests: read
 
 jobs:
-  main:
+  validate-pr-title:
     name: Validate PR title
     runs-on: ubuntu-latest
     steps:
