--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "email": "info@onet.dev",
     "url": "https://onet.dev"
   },
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=7.0.0"
+  },
   "private": false,
   "license": "MIT",
   "scripts": {
@@ -35,8 +39,8 @@
     "@vercel/analytics": "^1.3.1",
     "classnames": "^2.5.1",
     "color": "^4.2.3",
-    "eslint-config-next": "^14.2.7",
-    "next": "^14.2.7",
+    "eslint-config-next": "^14.2.15",
+    "next": "^14.2.15",
     "next-i18next": "^15.3.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -51,49 +55,49 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.8.0",
-    "@commitlint/cli": "^19.4.1",
-    "@commitlint/config-conventional": "^19.4.1",
-    "@next/eslint-plugin-next": "^14.2.7",
-    "@storybook/addon-essentials": "^8.2.9",
-    "@storybook/addon-interactions": "^8.2.9",
-    "@storybook/addon-links": "^8.2.9",
-    "@storybook/addon-onboarding": "^8.2.9",
-    "@storybook/addon-themes": "^8.2.9",
-    "@storybook/blocks": "^8.2.9",
-    "@storybook/nextjs": "^8.2.9",
-    "@storybook/react": "^8.2.9",
-    "@storybook/test": "^8.2.9",
+    "@chromatic-com/storybook": "^2.0.2",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@next/eslint-plugin-next": "^14.2.15",
+    "@storybook/addon-essentials": "^8.3.5",
+    "@storybook/addon-interactions": "^8.3.5",
+    "@storybook/addon-links": "^8.3.5",
+    "@storybook/addon-onboarding": "^8.3.5",
+    "@storybook/addon-themes": "^8.3.5",
+    "@storybook/blocks": "^8.3.5",
+    "@storybook/nextjs": "^8.3.5",
+    "@storybook/react": "^8.3.5",
+    "@storybook/test": "^8.3.5",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@types/color": "^3.0.6",
     "@types/eslint": "^8.56.10",
     "@types/eslint-config-prettier": "^6.11.3",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.13",
     "@types/lint-staged": "^13.3.0",
     "@types/node": "^20.14.8",
-    "@types/react": "^18.3.5",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/react-timeago": "^4.1.7",
-    "@typescript-eslint/eslint-plugin": "^8.3.0",
-    "@typescript-eslint/parser": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-storybook": "^0.8.0",
-    "eslint-plugin-tailwindcss": "^3.17.4",
+    "eslint-plugin-storybook": "^0.9.0",
+    "eslint-plugin-tailwindcss": "^3.17.5",
     "favicons": "^7.2.0",
-    "husky": "^9.1.4",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.2.8",
-    "postcss": "^8.4.41",
+    "lint-staged": "^15.2.10",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "storybook": "^8.2.9",
-    "tailwindcss": "^3.4.10",
-    "tsx": "^4.16.5",
-    "typescript": "^5.5.4"
+    "storybook": "^8.3.5",
+    "tailwindcss": "^3.4.13",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3"
   },
   "peerDependencies": {
     "i18next": "^23.10.1",
