feat(ci): trying to fix yml parser error for labeler

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -9,8 +9,8 @@ documentation:
 
 storybook:
   - .storybook/**
-  - */*.stories.ts
-  - */*.stories.tsx
+  - ./**.stories.ts
+  - ./**.stories.tsx
 
 ci/cd:
   - .github/workflows/**
