--- a/.github/workflows/pr-clerk.yml
+++ b/.github/workflows/pr-clerk.yml
@@ -17,10 +17,17 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   labeler:
-    name: Changed file based PR auto labeling
+    name: Labeling PR
     permissions:
       contents: read
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/labeler@v5
+
+  auto-author-assignee:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: kentaro-m/auto-assign-action@v2.0.0
+        with:
+          configuration-path: .github/auto-assign.yml
