--- a/.github/workflows/pr-clerk.yml
+++ b/.github/workflows/pr-clerk.yml
@@ -25,8 +25,10 @@ jobs:
     steps:
       - uses: actions/labeler@v5
 
-  auto-author-assignee:
+  author-as-assignee:
+    name: Author as assignee
     runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' && github.event.action == 'opened'
     steps:
       - uses: kentaro-m/auto-assign-action@v2.0.0
         with:
