--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-use": "^17.5.1",
     "sharp": "^0.33.5",
     "slugify": "^1.6.6",
+    "yaml": "^2.5.1",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
