feat(content): add contents label when anything changes in public folder

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -24,3 +24,8 @@ ci/cd:
       - .github/workflows/**
       - .github/labeler.yml
       - .github/CODEOWNERS
+
+content:
+  - changed-files:
+    - any-glob-to-any-file:
+      - public/**
