--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "storybook": "^8.3.5",
     "tailwindcss": "^3.4.13",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.3"
+    "typescript": "5.5.4"
   },
   "peerDependencies": {
     "i18next": "^23.10.1",
