feat(content): add packageManager to package.json and bump min pnpm version

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "url": "https://onet.dev"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "pnpm": ">=7.0.0"
+    "node": ">=20.0.0",
+    "pnpm": ">=9.0.0"
   },
+  "packageManager": "pnpm@9.12.1",
   "private": false,
   "license": "MIT",
   "scripts": {
