--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "url": "https://onet.dev"
   },
   "engines": {
-    "node": ">=20.0.0",
-    "pnpm": ">=9.0.0"
+    "node": ">=20.0.0"
   },
-  "packageManager": "pnpm@9.12.1",
   "private": false,
   "license": "MIT",
   "scripts": {
