--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "color": "^4.2.3",
     "eslint-config-next": "^14.2.15",
     "html-react-parser": "^5.1.18",
+    "marked": "^14.1.2",
     "next": "^14.2.15",
     "next-i18next": "^15.3.1",
     "next-themes": "^0.3.0",
@@ -51,6 +52,7 @@
     "react-share": "^5.1.0",
     "react-timeago": "^7.2.0",
     "react-use": "^17.5.1",
+    "sanitize-html": "^2.13.1",
     "sharp": "^0.33.5",
     "slugify": "^1.6.6",
     "yaml": "^2.5.1",
@@ -81,6 +83,7 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/react-timeago": "^4.1.7",
+    "@types/sanitize-html": "^2.13.0",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
     "autoprefixer": "^10.4.20",
