--- a/public/articles/en-001-top-25-worst-things-about-being-human/data.yml
+++ b/public/articles/en-001-top-25-worst-things-about-being-human/data.yml
@@ -3,28 +3,25 @@ language: en
 intro: You wouldn't believe what makes other humans so mad about their existence.
 publishedAt: 2024-10-10T14:49:00Z
 content: |
-  <p>
-    Life's little annoyances are enough to drive anyone mad. Stepping into a wet spot with socks on? Instant rage. And that strand of hair constantly brushing your face but never letting you grab it? Infuriating! Then there's the pen that rolls just out of reach, mocking you from under the couch, and don't even get me started on shoelaces that refuse to stay tied no matter how tightly you knot them. Peeling a sticker and being left with that sticky residue? Pure agony. And the moment your sleeve dips into water as you wash your hands—seriously, how does that even happen? These ridiculous, pointless moments make you want to scream, turning a normal day into a series of maddening, rage-inducing battles.
-  </p>
-  <ol>
-    <li>Stubbing your toe on a piece of furniture that's always been there</li>
-    <li>Customer service bots that never give helpful answers</li>
-    <li>Streaming buffering right in the middle of a show</li>
-    <li>When your phone charger only works at a very specific angle, and it doesn't charge your phone during the night and you wake up with 5% battery</li>
-    <li>Accidentally refreshing an infinite scroll page and losing the post you were just reading forever</li>
-    <li>When your shoelace constantly comes undone even after tightening it</li>
-    <li>Clothes getting caught on door handles as you pass by</li>
-    <li>Dropping a pen and watching it roll just out of reach under furniture</li>
-    <li>Getting a paper cut from something that shouldn't be sharp</li>
-    <li>Tying a plastic bag too tightly and then struggling to open it again</li>
-    <li>Peeling a sticker off something and it leaves behind that sticky residue</li>
-    <li>Having an itchy spot you can't reach on your back</li>
-    <li>Losing one sock in the laundry, and it never reappears</li>
-    <li>Not being able to find the end of the roll of tape</li>
-    <li>A sleeve falling down when you're trying to wash your hands</li>
-    <li>Stepping into a wet spot with socks on</li>
-    <li>Getting toothpaste on your clothes while brushing your teeth</li>
-    <li>The sound of nails scratching a chalkboard or similar surfaces</li>
-    <li>When a single strand of hair keeps tickling your face but you can't find it</li>
-    <li>Being <!-- intentionally cut in the middle, deliberatly trying to stay below 25 --></li>
-  </ol>
+  Life's little annoyances are enough to drive anyone mad. Stepping into a wet spot with socks on? Instant rage. And that strand of hair constantly brushing your face but never letting you grab it? Infuriating! Then there's the pen that rolls just out of reach, mocking you from under the couch, and don't even get me started on shoelaces that refuse to stay tied no matter how tightly you knot them. Peeling a sticker and being left with that sticky residue? Pure agony. And the moment your sleeve dips into water as you wash your hands—seriously, how does that even happen? These ridiculous, pointless moments make you want to scream, turning a normal day into a series of maddening, rage-inducing battles.
+
+  1. Stubbing your toe on a piece of furniture that's always been there
+  2. Customer service bots that never give helpful answers
+  3. Streaming buffering right in the middle of a show
+  4. When your phone charger only works at a very specific angle, and it doesn't charge your phone during the night and you wake up with 5% battery
+  5. Accidentally refreshing an infinite scroll page and losing the post you were just reading forever
+  6. When your shoelace constantly comes undone even after tightening it
+  7. Clothes getting caught on door handles as you pass by
+  8. Dropping a pen and watching it roll just out of reach under furniture
+  9. Getting a paper cut from something that shouldn't be sharp
+  10. Tying a plastic bag too tightly and then struggling to open it again
+  11. Peeling a sticker off something and it leaves behind that sticky residue
+  12. Having an itchy spot you can't reach on your back
+  13. Losing one sock in the laundry, and it never reappears
+  14. Not being able to find the end of the roll of tape
+  15. A sleeve falling down when you're trying to wash your hands
+  16. Stepping into a wet spot with socks on
+  17. Getting toothpaste on your clothes while brushing your teeth
+  18. The sound of nails scratching a chalkboard or similar surfaces
+  19. When a single strand of hair keeps tickling your face but you can't find it
+  20. Being <!-- intentionally cut in the middle, deliberatly trying to stay below 25 -->
