feat(content): add schema validator for vsc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,4 +28,7 @@
     "iteratorClassName",
     "localStyles.*"
   ],
+  "yaml.schemas": {
+    "schemas/article.json": "public/articles/*/data.yml"
+  }
 }
