--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
     "url": "https://onet.dev"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "pnpm": ">=7.0.0"
+    "node": ">=20.0.0"
   },
   "private": false,
   "license": "MIT",
   "scripts": {
-    "dev": "next dev --experimental-https",
-    "build": "next build",
-    "start": "next start",
+    "dev": "pnpm run gen-article-index && next dev --experimental-https",
+    "build": "pnpm run gen-article-index && next build",
+    "start": "pnpm run gen-article-index && next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "type-check": "tsc --project tsconfig.json --pretty --noEmit",
@@ -29,6 +28,7 @@
     "test:ci": "jest --ci",
     "prepare": "husky",
     "gen-manifest": "tsx ./scripts/gen-manifest.ts",
+    "gen-article-index": "tsx ./scripts/gen-article-index.ts",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -40,6 +40,8 @@
     "classnames": "^2.5.1",
     "color": "^4.2.3",
     "eslint-config-next": "^14.2.15",
+    "html-react-parser": "^5.1.18",
+    "marked": "^14.1.2",
     "next": "^14.2.15",
     "next-i18next": "^15.3.1",
     "next-themes": "^0.3.0",
@@ -50,8 +52,10 @@
     "react-share": "^5.1.0",
     "react-timeago": "^7.2.0",
     "react-use": "^17.5.1",
+    "sanitize-html": "^2.13.1",
     "sharp": "^0.33.5",
     "slugify": "^1.6.6",
+    "yaml": "^2.5.1",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
@@ -79,6 +83,7 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/react-timeago": "^4.1.7",
+    "@types/sanitize-html": "^2.13.0",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
     "autoprefixer": "^10.4.20",
@@ -97,7 +102,7 @@
     "storybook": "^8.3.5",
     "tailwindcss": "^3.4.13",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.3"
+    "typescript": "5.5.4"
   },
   "peerDependencies": {
     "i18next": "^23.10.1",
