--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,12 @@
     "localStyles.*"
   ],
   "yaml.schemas": {
-    "schemas/article.json": "public/articles/*/data.yml"
-  }
+    "src/schemas/article-entry-simplified.schema.json": "public/articles/*/data.yml"
+  },
+  "json.schemas": [
+    {
+      "fileMatch": ["public/articles/*-meta.json"],
+      "url": "./src/schemas/article-locale-meta.schema.json"
+    }
+  ]
 }
