--- a/package.json
+++ b/package.json
@@ -16,21 +16,24 @@
   "private": false,
   "license": "MIT",
   "scripts": {
-    "dev": "pnpm run gen-article-index && next dev --experimental-https",
-    "build": "pnpm run gen-article-index && next build",
-    "start": "pnpm run gen-article-index && next start",
-    "lint": "next lint",
+    "build:article-index": "tsx ./scripts/build-article-index.ts",
+    "build:manifest": "tsx ./scripts/build-manifest.ts",
+    "build:schema": "tsx ./scripts/build-json-schema.ts",
+    "build:storybook": "storybook build",
+    "build:artifacts": "pnpm run build:article-index && pnpm run build:schema",
+    "build": "pnpm run build:artifacts && next build",
+    "dev": "pnpm run build:artifacts && next dev --experimental-https",
     "lint:fix": "next lint --fix",
-    "type-check": "tsc --project tsconfig.json --pretty --noEmit",
-    "test": "jest --watch",
+    "lint": "next lint",
+    "prepare": "husky",
+    "postinstall": "pnpm run build:artifacts",
+    "start": "pnpm run build:artifacts && next start",
+    "storybook:dev": "storybook dev -p 6006",
+    "test:ci": "jest --ci",
     "test:coverage": "jest --coverage",
     "test:once": "jest",
-    "test:ci": "jest --ci",
-    "prepare": "husky",
-    "gen-manifest": "tsx ./scripts/gen-manifest.ts",
-    "gen-article-index": "tsx ./scripts/gen-article-index.ts",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "test": "jest --watch",
+    "type-check": "tsc --project tsconfig.json --pretty --noEmit"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -41,6 +44,7 @@
     "color": "^4.2.3",
     "eslint-config-next": "^14.2.15",
     "html-react-parser": "^5.1.18",
+    "json-schema-to-zod": "^2.4.1",
     "marked": "^14.1.2",
     "next": "^14.2.15",
     "next-i18next": "^15.3.1",
@@ -53,9 +57,10 @@
     "react-timeago": "^7.2.0",
     "react-use": "^17.5.1",
     "sanitize-html": "^2.13.1",
-    "sharp": "^0.33.5",
     "slugify": "^1.6.6",
     "yaml": "^2.5.1",
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.3",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
@@ -99,6 +104,7 @@
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "sharp": "^0.33.5",
     "storybook": "^8.3.5",
     "tailwindcss": "^3.4.13",
     "tsx": "^4.19.1",
