feat(content): add a lot of formatting for lists, paragraphs, tables

--- a/public/articles/en-003-gary/data.yml
+++ b/public/articles/en-003-gary/data.yml
@@ -8,6 +8,6 @@ content: |
 
   Prrt bleh, mew meow and mrrr. Yowl-chirp, trill mew prrt purr! Ekekekee rowl mow, mrrrow snarl mow-wow. Huff scree purr trrr yawp, blep and chitter mew. Mrrr, squee trrr prrt meow!
 
-  Rowl hiss mow mow-wow! Mew blep trrr, mrrrow purr. Nyan prrt yowl scree, ekekekee meow! Chirp chitter, mrrr meow yawp trrr. Prrt purr huff, snarl mow-wow squee.
+  Rowl hiss mow mow-wow! Mew blep trrr, mrrrow purr. *Nyan prrt yowl scree, ekekekee meow!* Chirp chitter, mrrr meow yawp trrr. Prrt purr huff, snarl mow-wow squee.
 
-  Mrrr purr chirp prrt, mew meow mow-wow! Trrrr yowl, bleh mew rowl prrt. Ekekekee squee hiss scree, mrrrow mow blep. Huff meow nyan mrrr, snarl yawp trrr chirp. Prrt trill rowl, purr meow!
+  Mrrr purr chirp prrt, mew meow mow-wow! Trrrr yowl, bleh mew rowl prrt. Ekekekee squee hiss scree, mrrrow mow blep. Huff meow nyan mrrr, snarl yawp trrr chirp. **Prrt trill rowl, purr meow!**
