--- a/public/articles/en-004-raising-the-galactic-wage/data.yml
+++ b/public/articles/en-004-raising-the-galactic-wage/data.yml
@@ -4,23 +4,23 @@ publishedAt: 2024-10-14T08:50:00Z
 content: |
   Alright, cosmic citizens, we need to have a serious chat about the Martian mining industry—where the pay is as bad as the working conditions, and Blurgark, the radioactive wonder-rock of the galaxy, is slowly turning workers into something straight out of a horror holovid. With Saint Gurglax's Second Approval (the galaxy's most sacred holiday) just around the corner, it's the perfect time to ask: Should we finally raise the Galactic Minimum Wage and stop this madness?
 
-  ### Blurgark: The Radioactive Jackpot That's Mutating Miners
+  # Blurgark: The Radioactive Jackpot That's Mutating Miners
 
   Let's talk about Blurgark, the glowing, volatile mineral that fuels everything from warp drives to space heaters. Sure, it's valuable, but here's the kicker—this stuff is also crazy dangerous. It's super radioactive, which makes mining it a one-way ticket to Mutant Town. Thren and Salkari miners are the poor souls tasked with dragging Blurgark out of the ground, and it's doing more than just wrecking their health. Long-term exposure to Blurgark? You're looking at new body parts where body parts shouldn't be. Extra limbs, weird growths, even a third eye popping up in the middle of your forehead. Yeah, that's what these workers are dealing with while barely scraping by on a wage that's laughable in the face of the risk.
 
   The Thren, with their ice-world origins and glowing purple eyes, are somehow holding on, but even they're starting to show signs of Blurgark exposure. Meanwhile, the Salkari, those reptilian badasses who can handle heat and radiation like nobody's business, are growing extra tails—and not in a good way. We're talking serious body horror, all because the Galactic Consortium wants their Blurgark on the cheap.
 
-  ### Housing and Food? Good Luck with That
+  # Housing and Food? Good Luck with That
 
   Want to know what life on Mars is like for these miners when they're not busy sprouting extra appendages? Imagine living in a cramped, rusty tin can at places like Red Dunes Ridge or Oxium Canyon, where the rent is sky-high, and the oxygen filters barely work. It's either that or homelessness on the Martian surface, which, spoiler alert, is a death sentence. As for food, well, you'd better love nutrient paste, because that's all you can afford. Anything resembling fresh food costs more than a month's wages.
 
-  ### Saint Gurglax's Second Approval: A Sacred Holiday and a Spark for Rebellion
+  # Saint Gurglax's Second Approval: A Sacred Holiday and a Spark for Rebellion
 
   The real kicker? All of this is happening in the lead-up to Saint Gurglax's Second Approval, the biggest, most sacred holiday in the galaxy. Gurglax, the saint of workers and underdogs everywhere, gave his legendary second thumbs-up to the galaxy's working class, blessing their efforts. This holiday is all about rest, family, and celebrating resilience in the face of adversity.
 
   Normally, the Thren and Salkari would go all out for this holiday, with feasts, rituals, and time spent with loved ones. But not on Mars. Nope, here, the Galactic Mining Guild is cracking the whip, forcing miners to keep grinding through the holiday, extracting more Blurgark so the rich can light their space mansions with extra limbs-free energy. It's an insult to everything Saint Gurglax stands for, and people are getting seriously fed up.
 
-  ### The Underground Rebellion: Saint Gurglax's Second Approval Won't Go Quietly
+  # The Underground Rebellion: Saint Gurglax's Second Approval Won't Go Quietly
 
   And here's where things get really interesting. There's been talk—rumors of an underground organization quietly working to overthrow the Galactic government during the upcoming Saint Gurglax's Second Approval. They call themselves the Luminal Order, and they're not just any group of disgruntled miners. They're a shadowy network of former workers, activists, and even a few high-ranking officials who are tired of watching the galaxy's elite bleed the working class dry.
 
@@ -28,7 +28,7 @@ content: |
 
   The Luminal Order's plans are still shrouded in mystery, but there are whispers of a coordinated strike—an intergalactic shutdown of Blurgark production during the sacred holiday. They're aiming to hit the Consortium where it hurts: in the Blurgark supply chain. If they pull it off, it could be the beginning of the end for the galaxy's corrupt elite.
 
-  ### The Bottom Line: Pay the Miners or Prepare for Revolt
+  # The Bottom Line: Pay the Miners or Prepare for Revolt
 
   With Saint Gurglax's Second Approval on the horizon, the miners of Mars are at a breaking point. They're growing extra limbs, living in slums, eating garbage, and getting zero sols off—all for wages that wouldn't even cover a luxury hover-taxi ride on Earth. The Galactic Minimum Wage needs a serious boost, and if the powers that be don't start paying attention, the Luminal Order might just kickstart the revolution they've been threatening.
 
