--- a/public/articles/en-005-best-pasta-recipie/data.yml
+++ b/public/articles/en-005-best-pasta-recipie/data.yml
@@ -30,7 +30,7 @@ content: |
 
   And so, whenever I return home and make Nonna's recipe, I am reminded that while the world is filled with incredible flavors and remarkable dishes, there is no pasta as comforting, as deeply meaningful, as hers. It is her legacy, not just in our family but in every meal shared with friends, in every bowl of pasta made with care. Nonna Maria's spirit lives on in the rolling of dough, the bubbling of sauce, and the joy that comes from creating something with your own two hands. And that is something the finest restaurant in the world will never be able to capture.
 
-  ## Nonna Maria's Signature Pasta with Fresh Tomato-Basil Sauce
+  # Nonna Maria's Signature Pasta with Fresh Tomato-Basil Sauce
 
   ## Ingredients:
 
