chore(ci): add next config to ci/ci labeler

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -24,6 +24,7 @@ ci/cd:
       - .github/workflows/**
       - .github/labeler.yml
       - .github/CODEOWNERS
+      - next.config.js
 
 content:
   - changed-files:
