--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -30,3 +30,9 @@ content:
   - changed-files:
     - any-glob-to-any-file:
       - public/**
+
+ui:
+  - changed-files:
+    - any-glob-to-any-file:
+      - src/components/**.tsx
+      - src/features/**/components/**.tsx
