--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint:fix": "next lint --fix",
     "lint": "next lint",
     "prepare": "husky",
-    "postinstall": "pnpm run build:artifacts",
+    "postinstall": "pnpm run build:schema",
     "start": "pnpm run build:artifacts && next start",
     "storybook:dev": "storybook dev -p 6006",
     "test:ci": "jest --ci",
@@ -61,13 +61,15 @@
     "slugify": "^1.6.6",
     "yaml": "^2.6.0",
     "zod": "^3.23.8",
-    "zod-to-json-schema": "^3.23.4",
+    "zod-to-json-schema": "^3.23.5",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.1.0",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.13.0",
     "@next/eslint-plugin-next": "^15.0.1",
     "@storybook/addon-essentials": "^8.3.6",
     "@storybook/addon-interactions": "^8.3.6",
@@ -80,7 +82,7 @@
     "@storybook/test": "^8.3.6",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
-    "@types/color": "^3.0.6",
+    "@types/color": "^4.2.0",
     "@types/eslint": "^9.6.1",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/jest": "^29.5.14",
