--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@next/bundle-analyzer": "^15.0.1",
     "@vercel/analytics": "^1.3.1",
     "classnames": "^2.5.1",
     "color": "^4.2.3",
