--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-src/schemas/*.schema.json
+src/lib/schemas/*.schema.json
 
 certificates
 *storybook.log
