chore(deps): update deps 241126

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,6 @@
   "explorer.fileNesting.patterns": {
     "tsconfig.json": "tsconfig.json, tsconfig.tsbuildinfo",
     "package.json": "package-lock.json, pnpm*",
-    "README.md": "CODE_OF_CONDUCT.md, CONTRIBUTING.md, LICENSE",
+    "README.md": "CODE_OF_CONDUCT.md, CONTRIBUTING.md, LICENSE, CHANGELOG.md",
   },
 }
