--- a/.envrc.example
+++ b/.envrc.example
@@ -1,6 +1,6 @@
 # To use nvmrc if asdf is being useg
 export ASDF_NODEJS_LEGACY_VERSION_FILE=true
 
-export SENTRY_CLIENT_DSN=https://{ID1}@{ID2}.ingest.de.sentry.io/{ID3}
+export NEXT_PUBLIC_SENTRY_CLIENT_DSN=https://{ID1}@{ID2}.ingest.de.sentry.io/{ID3}
 export SENTRY_SERVER_DSN=https://{ID1}@{ID2}.ingest.de.sentry.io/{ID3}
 export SENTRY_EDGE_DSN=https://{ID1}@{ID2}.ingest.de.sentry.io/{ID3}
