--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
   "scripts": {
     "build:article-index": "tsx ./scripts/build-article-index.ts",
     "build:manifest": "tsx ./scripts/build-manifest.ts",
+    "build:env-manifest": "tsx ./scripts/build-env-manifest.ts",
     "build:schema": "tsx ./scripts/build-json-schema.ts",
     "build:storybook": "storybook build",
-    "build:artifacts": "pnpm run build:article-index && pnpm run build:schema",
+    "build:artifacts": "pnpm run build:article-index && pnpm run build:schema && pnpm run build:env-manifest",
     "build": "pnpm run build:artifacts && next build",
     "dev": "pnpm run build:artifacts && next dev --experimental-https",
     "lint:fix": "next lint --fix",
@@ -49,6 +50,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@next/bundle-analyzer": "^15.0.3",
+    "@next/env": "^15.1.4",
     "@sentry/nextjs": "^8.43.0",
     "@vercel/analytics": "^1.4.1",
     "classnames": "^2.5.1",
