feat(error-tracking): rework deployment meta artifact generator

--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
   "scripts": {
     "build:article-index": "tsx ./scripts/build-article-index.ts",
     "build:manifest": "tsx ./scripts/build-manifest.ts",
-    "build:env-manifest": "tsx ./scripts/build-env-manifest.ts",
+    "build:deployment-meta": "tsx ./scripts/build-deployment-meta.ts",
     "build:schema": "tsx ./scripts/build-json-schema.ts",
     "build:storybook": "storybook build",
-    "build:artifacts": "pnpm run build:article-index && pnpm run build:schema && pnpm run build:env-manifest",
+    "build:artifacts": "pnpm run build:article-index && pnpm run build:schema && pnpm run build:deployment-meta",
     "build": "pnpm run build:artifacts && next build",
     "dev": "pnpm run build:artifacts && next dev --experimental-https",
     "lint:fix": "next lint --fix",
@@ -50,7 +50,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@next/bundle-analyzer": "^15.0.3",
-    "@next/env": "^15.1.4",
     "@sentry/nextjs": "^8.43.0",
     "@vercel/analytics": "^1.4.1",
     "classnames": "^2.5.1",
