--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
   "scripts": {
     "build:article-index": "tsx ./scripts/build-article-index.ts",
     "build:manifest": "tsx ./scripts/build-manifest.ts",
-    "build:deployment-meta": "tsx ./scripts/build-deployment-meta.ts",
     "build:schema": "tsx ./scripts/build-json-schema.ts",
     "build:storybook": "storybook build",
-    "build:artifacts": "pnpm run build:article-index && pnpm run build:schema && pnpm run build:deployment-meta",
+    "build:artifacts": "pnpm run build:article-index && pnpm run build:schema",
     "build": "pnpm run build:artifacts && next build",
     "dev": "pnpm run build:artifacts && next dev --experimental-https",
     "lint:fix": "next lint --fix",
