feat(error-tracking): reintroduce static deployment meta

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 /public/assets/articles/index.json
 /public/assets/articles/*/cover-*.*
 /public/manifest
+/public/deployment-meta.json
 
 # misc
 .DS_Store
