--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "build:manifest": "tsx ./scripts/build-manifest.ts",
     "build:schema": "tsx ./scripts/build-json-schema.ts",
     "build:storybook": "storybook build",
-    "build:artifacts": "pnpm run build:article-index && pnpm run build:schema",
+    "build:deployment-meta": "tsx ./scripts/build-deployment-meta.ts",
+    "build:artifacts": "pnpm run build:article-index && pnpm run build:schema && pnpm run build:deployment-meta",
     "build": "pnpm run build:artifacts && next build",
     "dev": "pnpm run build:artifacts && next dev --experimental-https",
     "lint:fix": "next lint --fix",
