feat(error-tracking): add sentry (#111)
* feat(content): update privacy policy to contain sentry

* feat(error-tracking): add sentry integration with temporary test routes

* feat(error-tracking): fix env typos DNS/DNS

* feat(error-tracking): sync privacy policy edit date with PR

* feat(error-tracking): rename sentry.config to next-sentry.config

* feat(error-tracking): add shared base config

* feat(error-tracking): normalize branch name

* feat(error-tracking): testing client side exception reporting

* feat(error-tracking): fix client reporting through NEXT_PUBLIC_SENTRY_CLIENT_DSN

* feat(error-tracking): add public build artifact with env config

* feat(error-tracking): rework deployment meta artifact generator

* feat(error-tracking): add source map file deletion after sentry upload

* feat(error-tracking): sync package lock

* feat(error-tracking): switch to next/config for fetching config info

* feat(error-tracking): reintroduce static deployment meta

* feat(error-tracking): remove global-error and sentr-example-page

* feat(error-tracking): replace static browser check

* feat(error-tracking): cleanup temp files and modifications

--- a/.envrc.example
+++ b/.envrc.example
@@ -1,2 +1,8 @@
 # To use nvmrc if asdf is being useg
-ASDF_NODEJS_LEGACY_VERSION_FILE=true
+export ASDF_NODEJS_LEGACY_VERSION_FILE=true
+
+export NEXT_PUBLIC_SENTRY_CLIENT_DSN=https://{ID1}@{ID2}.ingest.de.sentry.io/{ID3}
+export SENTRY_SERVER_DSN=https://{ID1}@{ID2}.ingest.de.sentry.io/{ID3}
+export SENTRY_EDGE_DSN=https://{ID1}@{ID2}.ingest.de.sentry.io/{ID3}
+
+export NEXT_PUBLIC_IS_DEV=true
