--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.54.2",
     "react-share": "^5.1.2",
-    "react-time-ago": "^7.3.3",
+    "react-timeago": "^7.2.0",
     "react-use": "^17.6.0",
     "sanitize-html": "^2.14.0",
     "yaml": "^2.7.0",
@@ -101,6 +101,7 @@
     "@types/node": "^22.10.7",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
+    "@types/react-timeago": "^4.1.7",
     "@types/sanitize-html": "^2.13.0",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
