--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "color": "^5.0.0",
     "eslint-config-next": "^15.2.4",
     "html-react-parser": "^5.2.2",
+    "i18next": "^24.2.3",
+    "i18next-resources-to-backend": "^1.2.1",
     "json-schema-to-zod": "^2.6.0",
     "marked": "^15.0.7",
     "next": "^15.2.4",
-    "next-i18next": "^15.4.2",
+    "next-i18n-router": "^5.5.1",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-confetti": "^6.4.0",
@@ -125,7 +127,6 @@
   },
   "peerDependencies": {
     "express": "^5.1.0",
-    "i18next": "^24.2.3",
     "react-i18next": "^15.4.1"
   }
 }
