chore: simplify linter workflow

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
         "redhat.vscode-yaml",
         "rubymaniac.vscode-direnv",
         "unifiedjs.vscode-mdx",
-        "yoavbls.pretty-ts-errors"
+        "yoavbls.pretty-ts-errors",
+        "me-dutour-mathieu.vscode-github-actions"
     ]
 }
