--- a/packages/component-library/tsconfig.json
+++ b/packages/component-library/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@maw/typescript-config/react-library",
   "compilerOptions": {
-    "baseUrl": ".",
-  },
+    "baseUrl": "."
+  }
 }
